classDiagram
    class FundingInvoiceController {
        +GenerateFundingInvoiceAsync(dto) Task~GenerateFundingInvoiceResultDto~
    }
    class IFundingInvoiceService {
        +GenerateFundingInvoiceAsync(dto) Task~GenerateFundingInvoiceResultDto~
    }
    class FundingInvoiceService {
        +GenerateFundingInvoiceAsync(dto) Task~GenerateFundingInvoiceResultDto~
    }
    class ISubaccountRepository {
        +GetByIdAsync(id) Task~Subaccount~
    }
    class ICashInOutRepository {
        +AddAsync(entity) Task~CashInOut~
    }
    class IUnitOfWork {
        +SaveChangesAsync() Task~int~
    }
    class Subaccount {
        +SubaccountId string
        +Balance decimal
        +Status string
    }
    class CashInOut {
        +TransactionId string
        +BatchId string
        +Amount decimal
        +TransactionType string
    }
    FundingInvoiceController --> IFundingInvoiceService : depends on
    IFundingInvoiceService <|.. FundingInvoiceService : implements
    FundingInvoiceService --> ISubaccountRepository : depends on
    FundingInvoiceService --> ICashInOutRepository : depends on
    FundingInvoiceService --> IUnitOfWork : depends on
    ISubaccountRepository ..> Subaccount : returns
    ICashInOutRepository ..> CashInOut : returns
